# SensorCity

./: .gitignore  README.md  mqtt_publisher.py  mqtt_subscriber.py
movement_detection_cpp/: CMakeLists.txt
movement_detection_cpp/include/: heat_map.h
movement_detection_cpp/src/: heat_map.cpp  main.cpp
movement_detection_python/: heat_map.py  movement_detection.py
sensor_client/: Dockerfile.template  main_client.py  main_client_mqtt.py  main_client_socket.py  requirements.txt  rotary_encoder.py  start.sh
sensor_server/: heat_map.py  main_server.py  main_server_mqtt.py  movement_detection.py
